<resources>
    <string name="app_name">Lwa</string>
    <string name="enter_key_hint">Key</string>
    <string name="submit_key_text">Use Key</string>
    <string name="clear_key_text">Clear Key</string>
    <string name="generate_key_text">Generate</string>
    <string name="qr_scan_key_text">Scan QR Code</string>
    <string name="key_placeholder">Generated Key</string>
    <string name="enter_key_too_short">Key value is short</string>
    <string name="enter_key_illegal_char">Invalid key character</string>


    <!-- NOTE: order matters here and must be the same as OtpType.*
         TODO(adhintz): make order not matter by using something like enums -->
    <!-- Different type of OTP accounts, displayed in drop-down menu when manually adding accounts.
         Codes can be generated either based on time or based on an incrementing counter. -->
    <string-array name="type">
        <item>Time based</item>
        <item>Counter based</item>
    </string-array>
</resources>
